Added bulkv2 format
